I think it works? copying

--- a/App_Example/index.htm
+++ b/App_Example/index.htm
@@ -335,11 +335,15 @@
         copying = true;
     }
 
-    document.getElementById("removeSubGraph").onclick = function()
-    {
+    function removeTemp(){
         model.remove(getSelectionEgId());
         view.removeCell();
         disableButtons();
+    }
+
+    document.getElementById("removeSubGraph").onclick = function()
+    {
+        removeTemp();
         addUndo();
     }
 
