--- a/App_Example/index.htm
+++ b/App_Example/index.htm
@@ -55,7 +55,7 @@
         </div>
         <div>
         <section style="padding-left: 24px;">
-            <textarea id=submit_error readonly rows="1" cols="65" style="width: 74%"></textarea>
+            <textarea id=submit_error readonly rows="1" cols="65" style="width: 74%; color: #FF0000; resize: none;"></textarea>
         </section>
         </div>
         
@@ -115,7 +115,7 @@
 
         <section>
             <div>
-                <textarea id=console readonly rows="4" cols="100" wrap="soft" style="width: 75%;"> - Console -</textarea>
+                <textarea id=console readonly rows="4" cols="100" wrap="soft" style="width: 75%; resize: none;"> - Console -</textarea>
             </div>
             <div>
                 <button type="button" style="color: #337ab7;" class="btn btn-secondary" onclick="return document.getElementById(&#34;console&#34;).value = &#34; - Console -&#34;"">Clear Console</button>
