--- a/App_Example/index.htm
+++ b/App_Example/index.htm
@@ -33,7 +33,7 @@
 </head>
 
 <body>
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-default" style="margin-bottom: 0px;">
     <div class="container-fluid">
         <div class="navbar-header">
             <a class="navbar-brand" href="#">Existential Graph Editor</a>
@@ -44,7 +44,7 @@
 <div>
     <a href="http://www.uah.edu/" data-toggle="tooltip" title="To UAH Website"><img class="uahImg" src="./images/uahLogo.png"></a>
     <form id="inputForm">
-        <div class="input-group">
+        <div class="input-group" style="margin-top: 20px; padding-top: 4px;">
             <input title="!(x) = not x (x false)&#013^ = and&#013!(!(x)) = not not x (x true)&#013x = any character (x true)&#013> = implication&#013| = or" id="expression" type="text" class="form-control" placeholder="Enter Expression" aria-describedby="basic-addon2" onclick="return change_to_black();">
             <div class="input-group-btn" style="color: #337ab7;">
                 <button class="btn btn-secondary" onclick="return OnClickDraw();" type="button" id="Submit">Submit</button>
@@ -62,7 +62,6 @@
     </form>
 </div>
 <br>
-<p></p>
 <div class="panel panel-primary">
     <div class="panel-body">
         <section>
@@ -102,18 +101,18 @@
                     <hr style="margin-bottom: 0px;">
                     <h4 id="headSide3">MODIFY</h4>
                     <div class="btn-group-vertical" role="group" aria-label="...">
-                        <button type="button" class="btn btn-info btn-sm" disabled="disabled" id="specialize" data-toggle="modal" data-target="#specializeModal">Specialize (Negative Context)</button>
-                        <button type="button" class="btn btn-info btn-sm" disabled="disabled" id="generalize">Generalize (Positive Context)</button>
-                        <button type="button" class="btn btn-info btn-sm" disabled="disabled" id="copy">Copy (Sub-Graph)</button>
-                        <button type="button" class="btn btn-info btn-sm" disabled="disabled" id="subgraphRemove">Remove (Sub-Graph)</button>
-                        <button type="button" class="btn btn-info btn-sm" disabled="disabled" id="doubleNegative">2X Negative (Sub-Graph)</button>
-                        <button type="button" class="btn btn-info btn-sm" disabled="disabled" id="remove2Xneg">Remove 2X (From Sub-Graph)</button>
+                        <button type="button" class="btn btn-info btn-sm" disabled="disabled" id="specialize" data-toggle="modal" data-target="#specializeModal">Specialize (Negative Context) - 1.i</button>
+                        <button type="button" class="btn btn-info btn-sm" disabled="disabled" id="generalize">Generalize (Positive Context) - 1.e</button>
+                        <button type="button" class="btn btn-info btn-sm" disabled="disabled" id="copy">Copy (Sub-Graph) - 2.i</button>
+                        <button type="button" class="btn btn-info btn-sm" disabled="disabled" id="subgraphRemove">Remove (Sub-Graph) - 2.e</button>
+                        <button type="button" class="btn btn-info btn-sm" disabled="disabled" id="doubleNegative">2X Negative (Sub-Graph) - 3.i</button>
+                        <button type="button" class="btn btn-info btn-sm" disabled="disabled" id="remove2Xneg">Remove 2X (From Sub-Graph) - 3.e</button>
                     </div>
                 </panel>
             </div>
         </section>
 
-        <section>
+        <section id="consoleArea">
             <div>
                 <textarea id=console readonly rows="4" cols="100" wrap="soft" style="width: 75%; resize: none;"> - Console -</textarea>
             </div>
@@ -121,16 +120,20 @@
                 <button type="button" style="color: #337ab7;" class="btn btn-secondary" onclick="return document.getElementById(&#34;console&#34;).value = &#34; - Console -&#34;"">Clear Console</button>
             </div>
         </section>
+        <script>           
+            let development = false;
+            if(!development){
+                document.getElementById("consoleArea").style.display = "none";
+            }
+        </script>
     </div>
-<!--br-->
-<div class="list-group">
-    <a href="#" class="list-group-item active">
-        <h4 class="list-group-item-heading">This is a UAH Project Done by the SMAP Center</h4>
-        <p class="list-group-item-text">...</p>
-    </a>
+    <!--br-->
 </div>
 
-<div class="panel-footer"></div>
+<div class="list-group" style="width: 99%; padding-left: 1%;">
+    <a href="http://www.uah.edu/smap" class="list-group-item active">
+        <h4 class="list-group-item-heading">This is a UAH Project Done by the SMAP Center</h4>
+    </a>
 </div>
 
 <!-- Modal button two-->
@@ -215,36 +218,37 @@
                 *A quick reference can be found by hovering over the "Enter Expression" box.
                 <br><br>
                 <DL>
-                    <DT>Existential Graph
-                    <DD>An existential graph is a type of diagrammatic or visual notation for logical expressions, proposed by Charles Sanders Peirce.
+                    <DT>Existential Graph</DT>
+                    <DD> - An existential graph is a type of diagrammatic or visual notation for logical expressions, proposed by Charles Sanders Peirce.</DD>
                 </DL><br>
                 <DL>
-                    <DT>Graph Creation
-                    <DD>You may enter an expression for a graph; alternatively, you may construct a graph from scratch using the CONSTRUCT section to add elements to the graph or to other elements.
-                    <DT>Graph Manipulation
-                    <DD>Once you are ready to manipulate the graph, you can use the MODIFY section to follow rules for existential graph manipulation.
+                    <DT>Graph Creation</DT>
+                    <DD> - You may enter an expression for a graph; alternatively, you may construct a graph from scratch using the CONSTRUCT section to add elements to the graph or to other elements.</DD>
+                    <DT>Graph Manipulation</DT>
+                    <DD> - Once you are ready to manipulate the graph, you can use the MODIFY section to follow rules for existential graph manipulation.</DD>
                 </DL><br>
                 <DL>
-                    <DT>Sheet of Assertion
-                    <DD>A blank page, or the "sheet of assertion" (or just "sheet"), denotes truth.
-                    <DT> Subgraphs; Assertions and Contexts
-                    <DD>A letter, or an "assertion," or multiple letters denote truth. They may be enclosed in a simple closed curve, called a cut, to denote false. Cuts, as well as assertions, may be parts of a subgraph, denoting negations inside of cuts.
-                    <DT>Nesting
-                    <DD>Cuts can nest into other cuts, but cannot intersect. Each nested cut negates the previous denotement, that is if the previous cut denotes false, the nested cut will denote truth.
+                    <DT>Sheet of Assertion</DT>
+                    <DD> - A blank page, or the "sheet of assertion" (or just "sheet"), denotes truth.</DD>
+                    <DT>Subgraphs; Assertions and Contexts</DT>
+                    <DD> - A subgraph may be any part of the graph, including blank space, not separated by a cut.</DD>
+                    <DD> - A letter, or an "assertion," or multiple letters denote truth. They may be enclosed in a simple closed curve, called a cut, to denote false. Cuts, as well as assertions, may be parts of a subgraph, denoting negations inside of cuts.</DD>
+                    <DT>Nesting</DT>
+                    <DD> - Cuts can nest into other cuts, but cannot intersect. Each nested cut negates the previous denotement, that is if the previous cut denotes false, the nested cut will denote truth.</DD>
                 </DL><br>
                 <DL>
-                    <DT>Specialize (Negative Context)
-                    <DD>To specialize a subgraph is to insert a subgraph into a false context; any subgraph may be added to a false context.
-                    <DT>Generalize (Positive Context)
-                    <DD>To generalize a subgraph is to erase a subgraph from a true context; any subgraph may be removed from a true context.
-                    <DT>Copy (Sub-Graph)
-                    <DD>To copy a subgraph, it must be from a layer closer to the sheet of assertion and copied deeper into a context or nested context; a subgraph may only be copied into a subgraph of a deeper layer, and not of itself. Also referred to as iteration.
-                    <DT>Remove (Sub-Graph)
-                    <DD>To remove a subgraph, it must exist in a layer closer to the sheet of assertion, such that it may have been copied to where it currently is; a subgraph may only be removed if another subgraph of itself exists at a higher layer. Also referred to as deiteration.
-                    <DT>2x Negative (Sub-Graph)
-                    <DD>To double negate is to add a double cut around a subgraph. A double cut may be added to any subgraph, as it does not change the context.
-                    <DT>Remove 2X (From Sub-Graph)
-                    <DD>To remove a double negation is to remove a double cut around a subgraph. A double cut may be removed from any subgraph as long as it has a double cut, as it does not change the context.
+                    <DT>Specialize (Negative Context)</DT>
+                    <DD> - To specialize a subgraph is to insert a subgraph into a false context; any subgraph may be added to a false context.</DD>
+                    <DT>Generalize (Positive Context)</DT>
+                    <DD> - To generalize a subgraph is to erase a subgraph from a true context; any subgraph may be removed from a true context.</DD>
+                    <DT>Copy (Sub-Graph)</DT>
+                    <DD> - To copy a subgraph, it must be from a layer closer to the sheet of assertion and copied deeper into a context or nested context; a subgraph may only be copied into a subgraph of a deeper layer, and not of itself. Also referred to as iteration.</DD>
+                    <DT>Remove (Sub-Graph)</DT>
+                    <DD> - To remove a subgraph, it must exist in a layer closer to the sheet of assertion, such that it may have been copied to where it currently is; a subgraph may only be removed if another subgraph of itself exists at a higher layer. Also referred to as deiteration.</DD>
+                    <DT>2x Negative (Sub-Graph)</DT>
+                    <DD> - To double negate is to add a double cut around a subgraph. A double cut may be added to any subgraph, as it does not change the context.</DD>
+                    <DT>Remove 2X (From Sub-Graph)</DT>
+                    <DD> - To remove a double negation is to remove a double cut around a subgraph. A double cut may be removed from any subgraph as long as it has a double cut, as it does not change the context.</DD>
                 </DL>
             </div>
             <div class="modal-footer">
@@ -366,6 +370,15 @@
     }
 
     document.getElementById("doubleNegative").onclick = function(){
+        let x1;
+        if(selection){
+            x1 = model.addNegativeContext(selection.model.prop('egId'));
+            model.addNegativeContext(x1);
+        }else{
+            x1 = model.addNegativeContext(0);
+            model.addNegativeContext(x1);
+        }
+        /*
         let tempSelect = getSelectionEgId();
         let selectionParent = getCellModel(selection.model.get('parent'));
         removeSelection();
@@ -376,6 +389,7 @@
         copy(getCellModelFromEgId(tempSelect),getCellModelFromEgId(inside));
         selection = paper.findViewByModel(getCellModelFromEgId(tempSelect));
         document.getElementById("removeSubGraph").click();
+        */
     }
 
     document.getElementById("remove2Xneg").onclick = function(){
@@ -492,11 +506,11 @@
         $('#generalize').prop('disabled', true);
         $('#copy').prop('disabled', true);
         $('#subgraphRemove').prop('disabled', true); //remove in modify section
-        $('#doubleNegative').prop('disabled', true);
+        $('#doubleNegative').prop('disabled', false);
         $('#remove2Xneg').prop('disabled', true);
         if(selection){
             //Can always add double negation to a selection
-            $('#doubleNegative').prop('disabled', false);
+            //$('#doubleNegative').prop('disabled', false);
 
             //you can always copy a button, but there may NOT be a valid place to put it
             $('#copy').prop('disabled', false);
