Renamed "Modify" to "Inference"

--- a/App_Example/index.htm
+++ b/App_Example/index.htm
@@ -99,7 +99,7 @@
                         </div>
                     </div>
                     <hr style="margin-bottom: 0px;">
-                    <h4 id="headSide3">MODIFY</h4>
+                    <h4 id="headSide3">INFERENCE</h4>
                     <div class="btn-group-vertical" role="group" aria-label="...">
                         <button type="button" class="btn btn-info btn-sm" disabled="disabled" id="specialize" data-toggle="modal" data-target="#specializeModal">Specialize (Negative Context) - 1.i</button>
                         <button type="button" class="btn btn-info btn-sm" disabled="disabled" id="generalize">Generalize (Positive Context) - 1.e</button>
