--- a/App_Example/index.htm
+++ b/App_Example/index.htm
@@ -464,6 +464,7 @@
         document.getElementById("expression").value = "";
         view.EGclear();
         addUndo();
+        disableButtons();
     }
 
     function drawGraph()
