Added our names back

--- a/index.htm
+++ b/index.htm
@@ -131,9 +131,12 @@
 </div>
 
 <div class="list-group" style="width: 99%; padding-left: 1%;">
+    <span>
     <a href="http://www.uah.edu/smap" class="list-group-item active">
         <h4 class="list-group-item-heading">This is a UAH Project Done by the SMAP Center</h4>
+    <h5 class="list-group-tem-heading">Created by Dr. William Sabados, Panteleimon (Telly) Minas Polychroniades, Jason Thomas, Spencer Bowen, Matthew Daigle, and Irene Kasian</h5>
     </a>
+    </span>
 </div>
 
 <!-- Modal button two-->
