Title and Version Good

--- a/index.htm
+++ b/index.htm
@@ -36,7 +36,7 @@
 <nav class="navbar navbar-default" style="margin-bottom: 0px;">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="#">Existential Graph Editor</a>
+            <a class="navbar-brand" href="#">Existential Graph Editor Tool</a>
         </div>
     </div>
 </nav>
@@ -133,8 +133,8 @@
 <div class="list-group" style="width: 99%; padding-left: 1%;">
     <span>
     <a href="http://www.uah.edu/smap" class="list-group-item active">
-        <h4 class="list-group-item-heading">This is a UAH Project Done by the SMAP Center</h4>
-    <h5 class="list-group-tem-heading">Created by Dr. William Sabados, Telly Polychroniades, Jason Thomas, Spencer Bowen, Matthew Daigle, and Irene Kasian</h5>
+        <h4 class="list-group-item-heading">Existential Graph Editor Tool v1.0</h4>
+        <h5 class="list-group-tem-heading" style="margin-bottom:0px;">Created by Dr. William Sabados, Telly Polychroniades, Jason Thomas, Spencer Bowen, Matthew Daigle, and Irene Kasian</h5>
     </a>
     </span>
 </div>
@@ -220,7 +220,7 @@
             <div class="modal-body">
                 <DL>
                     <DT>Expression Input</DT>
-                    <DD>The "Enter Expression" box ("!(P^!(Q))" by default) will accept the following inputs*:</DD><br>
+                    <DD>The "Enter Expression" box ("!(P&!(Q))" by default) will accept the following inputs*:</DD><br>
                     <DD>- !(x) = not x (x false)<br>
                         - & = and<br>
                         - !(!(x)) = not not x (x true)<br>
